--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="./main.css">
-    <script src="http://54.173.244.240:30845/js/frame.js"></script>
+    <script src="https://tams.sisensepoc.com/js/frame.js"></script>
 </head>
 
 <body>
