trying out the two frames

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-    <div></div>
+    <button onclick="createWidget()">Create Widget</button>
     <iframe id="sisenseFrame"></iframe>
+    <iframe id="widgetFrame"></iframe>
 </body>
 
-<script src="./main.js"></script>
+<script src="./main.js"></script>   
