--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <button onclick="createWidget()">Create Widget</button>
     <iframe id="sisenseFrame"></iframe>
-    <iframe id="widgetFrame"></iframe>
+    <iframe id="widgetFrame" style="display: none" src="https://tams.sisensepoc.com/app/main/dashboards/63c02028d54e7100352b0e8d/widgets/new?datasource=New%20Jira&type=chart%2Fline"></iframe>
 </body>
 
 <script src="./main.js"></script>   
