--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <button onclick="createWidget()">Create Widget</button>
+    <button onclick="showWidget()">Save</button>
     <iframe id="sisenseFrame"></iframe>
     <iframe id="widgetFrame"></iframe>
 </body>
