--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <button onclick="createWidget()">Create Widget</button>
     <iframe id="sisenseFrame"></iframe>
-    <iframe id="widgetFrame"></iframe>
+    <iframe id="widgetFrame" style="display: none"></iframe>
 </body>
 
 <script src="./main.js"></script>   
