--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <button onclick="createWidget()">Create Widget</button>
+    <h1 id="header"></h1>
     <iframe id="sisenseFrame"></iframe>
     <iframe id="widgetFrame" style="display: none"></iframe>
 </body>
