--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <link rel="stylesheet" href="./main.css">
     <script src="https://tams.sisensepoc.com/js/frame.js"></script>
+
 </head>
 
 <body>
     <button onclick="createWidget()">Create Widget</button>
+    <button><a href="./js-embed.html">JS Embed</a></button>
     <h1 id="header"></h1>
     <iframe id="sisenseFrame"></iframe>
 </body>
 
 <script src="./main.js"></script>   
+<script type="text/javascript" src="https://example.com/js/sisense.v1.js" async defer></script>
