--- a/js-embed.html
+++ b/js-embed.html
@@ -8,6 +8,8 @@
         <meta name="JS embed of Sisense" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="js.css">
+        <link id="sisense-preload" rel="preload" href="https://tams.sisensepoc.com/js/sisense.v1.js" as="script">
+        <script type="text/javascript" src="./sisense-js-embed.js"></script>
     </head>
     <body>
         
