--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 
-<head>
-    <link rel="stylesheet" href="./main.css">
-    <script src="https://tams.sisensepoc.com/js/frame.js"></script>
-    <script src="./main.js"></script> 
-</head>
+<html>
+    <head>
+        <link rel="stylesheet" href="./main.css">
+        <script src="https://tams.sisensepoc.com/js/frame.js"></script>
+    </head>
 
-<body>
-    <button onclick="createWidget()">Create Widget</button>
-    <button><a href="./js-embed.html">JS Embed</a></button>
-    <h1 id="header"></h1>
-    <iframe id="sisenseFrame"></iframe>
-</body>
+
+    <body>
+        <button onclick="createWidget()">Create Widget</button>
+        <button><a href="./js-embed.html">JS Embed</a></button>
+        <h1 id="header"></h1>
+        <iframe id="sisenseFrame"></iframe>
+        <script src="./main.js"></script> 
+    </body>
+</html>
 
   
