added button to nav back home

--- a/js-embed.html
+++ b/js-embed.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="./sisense-js-embed.js"></script>
     </head>
     <body>
-        
+        <button><a href="./">Home</a></button>
         <div id="sisenseApp">
             <div widget-id="63c02066d54e7100352b0e8f" id="widget">
             </div>
